add notes to export csv file. update user guide

--- a/docs/UserGuide.adoc
+++ b/docs/UserGuide.adoc
@@ -405,17 +405,32 @@ Back up file will automatically overwrite the main file if the main file is corr
 Clears the recycle bin. +
 Format: `binclear`
 
+=== Import from CSV(.csv) files to OneBook : `import` [yellow]#*Coming in v2.0#
+
+Import a CSV file from directory to OneBook +
+Format: `import [file directory]`
+
+=== Email to a person from Onebook contact list  via user's default web browser: `email` [yellow]#*Coming in v2.0#
+
+Emails to the person selected from Onebook contact list  via user's default web browser +
+Format: `email [email website] [Index]`
 
 == FAQ
 
 *Q*: How do I transfer my data to another Computer? +
 *A*: Install the app in the other computer and overwrite the empty data file it creates with the file that contains the data of your previous Address Book folder.
 
-*Q*: Why do I keep getting unknown command when typing a command?
+*Q*: Why do I keep getting unknown command when typing a command? +
 *A*: The command typed is invalid. Refer to Command Summary section for all the commands.
 
-*Q*: After entering list command, why do I not get any contact list?
+*Q*: After entering list command, why do I not get any contact list? +
 *A*: You might not have added at least one person to Onebook. Add at least one person to Onebook and try running the command again.
+
+*Q*: Why does it link to Windows mail or MACOS mailand not microsoft outlook when I type email command? +
+*A*: Your default mail application might be windows mail, not microsoft outlook. Go to settings to change your default mail application to your preference.
+
+*Q*: I have 500 contacts to import. When I use import command, only 490 contacts are imported. +
+*A*: You might have duplicated contacts in the list which are not imported.
 
 == Command Summary
 
