--- a/docs/AboutUs.adoc
+++ b/docs/AboutUs.adoc
@@ -13,7 +13,7 @@ We are a team of students from the http://www.comp.nus.edu.sg[School of Computin
 
 === Henry Ang
 image::frozventus.jpg[width="150", align="left"]
-{empty}[https://github.com/frozventus[github]] [<<johndoe#, portfolio>>]
+{empty}[https://github.com/frozventus[github]] [<<henryang#, portfolio>>]
 
 Role: Developer +
 Responsibilities: Model
