--- a/docs/DeveloperGuide.adoc
+++ b/docs/DeveloperGuide.adoc
@@ -422,6 +422,7 @@ The fields that are currently exported to VCard file are: +
 * `birthday` +
 * `organisation`
 
+// tag::bin[]
 === Recycle bin
 The recycle bin is implemented by having address book store the list of person deleted using a separate list from the main address book list. +
 
@@ -444,6 +445,7 @@ The recycle bin is implemented by having address book store the list of person d
 **Alternative 2:** Add a new command for each feature of `RecycleBin` usage. +
 **Pros:** Additional parsing of command is unnecessary. +
 **Cons:** Commands will be easily mixed up. Purpose of command will be unintuitive, `clear` may mean to clear recycle or to clear address book. A separate command name for clearing recycle bin need to be thought of (clear can no longer be used). +
+// end::bin[]
 
 == Documentation
 
