--- a/docs/team/henryang.adoc
+++ b/docs/team/henryang.adoc
@@ -3,19 +3,23 @@ ifdef::env-github,env-browser[:outfilesuffix: .adoc]
 :imagesDir: ../images
 :stylesDir: ../stylesheets
 
-== Project: AddressBook - Level 4
-AddressBook - Level 4 is a desktop address book application used for teaching Software Engineering principles. The user interacts with it using a CLI, and it has a GUI created with JavaFX. It is written in Java, and has about 6 kLoC.
+== Project: OneBook
+OneBook is a desktop Address Book application. It uses a Graphical User Interface (GUI) but most of the interactions happen using Command Line Interface (CLI).
 
-*Code contributed*: [https://github.com[Functional code]] [https://github.com[Test code]] {give links to collated code files}
+OneBook is optimized for companies' usage. It is also suitable for general usage.
 
-=== Enhancement Added: Undo/Redo
+OneBook allows users to easily import and export contacts, send emails conveniently and stores a database of contacts.
+
+*Code contributed*: [https://github.com[Functional code]] [https://github.com[Test code]]
+
+=== Enhancement Added: Recycle Bin
 
 ==== External behavior
 
 ---
 #Start of Extract [from: User Guide]#
 
-include::../UserGuide.adoc[tag=undoredo]
+include::../UserGuide.adoc[tag=bin]
 
 #End of Extract#
 
@@ -23,14 +27,21 @@ include::../UserGuide.adoc[tag=undoredo]
 
 ==== Justification
 
-{Justify the need for, and the current design (i.e. external behavior) of, the feature}
+Accidentally deleting contacts can be a major problem for companies expecially if it is an important contact.
+The `undo` function is sometimes not suitable for use due to reasons such as:
+
+* Many commands to undo.
+* Application has already been closed and restarted, hence clearing the undo/redo stack.
+
+The `restore` command allows users to selectively restore deleted contacts. +
+The `bindelete` command allows users to manage their Recycle Bin to reduce clutter.
 
 ==== Implementation
 
 ---
 #Start of Extract [from: Developer Guide]#
 
-include::../DeveloperGuide.adoc[tag=undoredo]
+include::../DeveloperGuide.adoc[tag=bin]
 
 #End of Extract#
 
