Update henryang portfolio

--- a/docs/team/henryang.adoc
+++ b/docs/team/henryang.adoc
@@ -2,6 +2,7 @@
 ifdef::env-github,env-browser[:outfilesuffix: .adoc]
 :imagesDir: ../images
 :stylesDir: ../stylesheets
+:repoURL: https://github.com/CS2103AUG2017-T17-B4/main
 
 == Project: OneBook
 OneBook is a desktop Address Book application. It uses a Graphical User Interface (GUI) but most of the interactions happen using Command Line Interface (CLI).
@@ -10,7 +11,7 @@ OneBook is optimized for companies' usage. It is also suitable for general usage
 
 OneBook allows users to easily import and export contacts, send emails conveniently and stores a database of contacts.
 
-*Code contributed*: [https://github.com[Functional code]] [https://github.com[Test code]]
+*Code contributed*: [link:{repoURL}/blob/master/collated/main/frozventus.md[Functional code]] [link:{repoURL}/blob/master/collated/test/frozventus.md[Test code]]
 
 === Enhancement Added: Recycle Bin
 
@@ -47,15 +48,34 @@ include::../DeveloperGuide.adoc[tag=bin]
 
 ---
 
-=== Enhancement Proposed: Add command `remark`
+=== Enhancement Added: Modify UI to display contact details.
 
-{Explain similar to the Undo/Redo feature above.}
+image::Ui.png[width="790"]
+
+==== Justification
+
+The original UI has a large amount of spaced used for a browser display panel of a Google Search of the selected contact's name. +
+This does not serve much useful purpose while taking a large amount of space. +
+To better make use of the space, all details except name, phone and tags of the contacts are stripped from the contact display list on the side.
+The details are then only displayed when the person are selected from the list. The browser panel is also now made to display
+Google Maps address of the selected contact instead.
+
+==== Implementation
+
+---
+#Start of Extract [from: Developer Guide]#
+
+include::../DeveloperGuide.adoc[tag=ui]
+
+#End of Extract#
+
+---
 
 === Other contributions
 
-* Updated the GUI color scheme (Pull requests https://github.com[#33], https://github.com[#34])
-* Wrote additional tests to increase coverage from 88% to 92% (Pull requests https://github.com[#36], https://github.com[#38])
+* Added Birthday field into contacts (Pull requests link:{repoURL}/pull/23[#23])
+* Setting up project repository(Pull requests link:{repoURL}/pull/1[#1], link:{repoURL}/pull/2[#2], link:{repoURL}/pull/3[#3])
 
-== Project: PowerPointLabs
+== Project: TickList
 
-{Optionally (not graded), you may include other projects in your portfolio.}
+Ticklist is a to-do-list application for Android (https://github.com/FrozVentus/TickList[TickList])
