--- a/docs/team/stan789.adoc
+++ b/docs/team/stan789.adoc
@@ -2,6 +2,7 @@
 ifdef::env-github,env-browser[:outfilesuffix: .adoc]
 :imagesDir: ../images
 :stylesDir: ../stylesheets
+:repoURL: https://github.com/CS2103AUG2017-T17-B4/main
 
 == Project: OneBook
 OneBook is a desktop Address Book application. It uses a Graphical User Interface (GUI) but most of the interactions happen using Command Line Interface (CLI).
