--- a/docs/AboutUs.adoc
+++ b/docs/AboutUs.adoc
@@ -11,7 +11,7 @@ We are a team of students from the http://www.comp.nus.edu.sg[School of Computin
 
 == Project Team
 
-=== Henry Ang
+=== Henry Ang Tien Hock
 image::frozventus.jpg[width="150", align="left"]
 {empty}[https://github.com/frozventus[github]] [<<henryang#, portfolio>>]
 
