Update portfolio and code collation

--- a/docs/team/henryang.adoc
+++ b/docs/team/henryang.adoc
@@ -1,4 +1,4 @@
-= Henry Ang - Project Portfolio
+= Henry Ang Tien Hock - Project Portfolio
 ifdef::env-github,env-browser[:outfilesuffix: .adoc]
 :imagesDir: ../images
 :stylesDir: ../stylesheets
